--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Matheus Giovani",
-            "email": "teusgiovani@gmail.com"
+            "email": "matheus@ad3com.com.br"
         }
     ],
     "require": {
